bfr router destroy

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,4 +1,5 @@
 $colorDark: #2c3e50;
 $colorGreen: #009688;
-$colorGrey: #b3b3b3;
+$colorGrey: #ddd;
+$colorLightGrey: #f2f2f2;
 // $colorLightGreen: #42b983;
